@@ -1,3 +1,9 @@
+28Oct00=======================================================================
+1. updated show/sun and show/moon from stuff sent by Steve Franke K9
+2. added show/call which queries jeifer.pineknot.com for any call in the 
+world (as opposed to UALR which only does US calls). Inspired by a bit of 
+perl sent to me by Steve Franke (again!) and also Angel EA7WA who gave me the
+pineknot ip address.
 27Oct00=======================================================================
 1. alter the code in clean_old of DXMsg system to see if we get some different
 behaviour with random crashing
